--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
     <p>
       Soy desarrollador web, centrado en el Frontend, ¡pero hago de todo! Puedes
       encontrarme en
-      <a href="mailto:andres@andrespradomorgaz.com" class="text-highlight">andres@andrespradomorgaz.com</a>
+      <!-- <a href="mailto:andres@andrespradomorgaz.com" class="text-highlight">andres@andrespradomorgaz.com</a> -->
       y en
       <a href="https://www.linkedin.com/in/apradomorgaz/" class="text-highlight">LinkedIn</a>.
     </p>
