Update CSS styles for home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,13 +18,13 @@
     <p>
       Soy desarrollador web, centrado en el Frontend, ¡pero hago de todo! Puedes
       encontrarme en
-      <!-- <a href="mailto:andres@andrespradomorgaz.com" class="text-highlight">andres@andrespradomorgaz.com</a> -->
+      <a href="mailto:ruben.machado1920@gmail.com" class="text-highlight">{{ email }}</a>
       y en
       <a href="https://www.linkedin.com/in/apradomorgaz/" class="text-highlight">LinkedIn</a>.
     </p>
   </section>
   
-  <section class="projectsSection">
+  <!-- <section class="projectsSection">
     <h3>Explora algunos de mis proyectos en vivo</h3>
     <div class="projectsList">
       <article class="project">
@@ -55,8 +55,6 @@
           </div>
         </div>
       </article>
-      
-      <!-- Puedes repetir más artículos aquí para los otros proyectos -->
     </div>
-  </section>
-  
+  </section> -->
+  <app-projects></app-projects>
