Update CSS styles for home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
   
   <section class="sectionIntro">
     <header class="intro">
-      <img src="./assets/profilePic.webp" alt="Foto de perfil de Rubén Aldonza Cejudo" />
+      <img src="./Assets/profilePic.webp" alt="Foto de perfil de Rubén Aldonza Cejudo" />
       <div>
         <h1>¡Hola! Soy Rubén Aldonza Cejudo</h1>
         <p class="mt-1 text-gray">
@@ -18,5 +18,7 @@
     <p> Soy desarrollador web, centrado en el Frontend, ¡pero hago de todo! Puedes encontrarme en <a href="mailto:ruben.machado1920@gmail.com" class="text-highlight">{{ email }}</a> y en <a href="https://linkedin.com/in/rubén-aldonza-cejudo-414bb7142" class="text-highlight">LinkedIn</a>.
     </p>
   </section>
-  
+
   <app-projects></app-projects>
+
+  <app-skills></app-skills>
