Update angular.json, home component HTML, and home component TypeScript files
Agregar el archivo src/assets/js/script.js a la lista de scripts en el archivo angular.json. En el archivo home.component.html, se agregaron las secciones de proyectos y habilidades. En el archivo home.component.ts, se importó el componente FooterComponent. También se agregó el componente FooterComponent y se actualizó el archivo home.component.html para incluir el componente FooterComponent.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,6 +19,12 @@
     </p>
   </section>
 
-  <app-projects></app-projects>
+  <section class="projectsSection">
+    <app-projects></app-projects>
+  </section>
+  
+  <section class="aboutSection">
+    <app-skills></app-skills>
+  </section>
 
-  <app-skills></app-skills>
+  <app-footer></app-footer>
