Update angular.json and home component HTML for project and skill sections

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -3,10 +3,10 @@
         <div class="projectsList">
             <article class="project">
                 <div class="img-container">
-                    <img src="./assets/thumbTVLogger.webp" alt="TVLogger thumbnail"/>
+                    <img src="assets/img/png/proyectoMarvel.png" />
                 </div>
                 <div class="project-details">
-                    <h3>TVLogger</h3>
+                    <h3>Búsqueda de Personajes de Marvel</h3>
                     <div class="techList">
                         <span class="techItem">
                             <svg class="svg" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -16,16 +16,13 @@
                             <span>React</span>
                         </span>
                     </div>
-                    Lleva un registro de las películas y series de TV que
-                    has visto. No vuelvas a perder la cuenta de qué capítulo
-                    te toca ahora.
-                    
+                    Este proyecto fue uno de los primeros que desarrollé utilizando REACT, es un buscador de personajes que utiliza la API de Marvel.
                     <div class="project-links">
-                        <a href="https://andrespradomorgaz.com/tv-react-tracker">
+                        <a href="https://marvel-explorer-phi.vercel.app/">
                             <i class="bi bi-link-45deg"></i>
                             <span>Proyecto</span>
                         </a>
-                        <a href="https://github.com/andpramor/tv-react-tracker">
+                        <a href="https://github.com/Rubencito2002/marvel-explorer">
                             <i class="bi bi-code-slash"></i>
                             <span>Código</span>
                         </a>
@@ -34,10 +31,10 @@
             </article>
             <article class="project">
                 <div class="img-container">
-                    <img src="./assets/thumbBootstrap.webp" alt="Bootstrap project thumbnail"/>
+                    <img src="./assets/img/png/proyectoBootstrap&CSS.png" alt="Bootstrap project thumbnail"/>
                 </div>
                 <div class="project-details">
-                    <h3>Portfolio simulado</h3>
+                    <h3>Proyecto de Bootstrap & CSS</h3>
                     <div class="techList">
                         <span class="techItem">
                             <svg class="svg" viewBox="0 0 24.00 24.00" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -50,13 +47,9 @@
                             <span>Bootstrap 5</span>
                         </span>
                     </div>
-                    Una plantilla para desarrolladores y diseñadores, con
-                    apartados para proyectos, experiencia y educación,
-                    utilizando Bootstrap 5 para el display responsive y
-                    algunos estilos.
-                    
+                    Este es un proyecto que ha sido desarrollado a partir de un taller bootstrap con css propio.
                     <div class="project-links">
-                        <a href="https://andrespradomorgaz.com/Portfolio-Bootstrap">
+                        <a href="https://proyecto-bootstrap-con-css.vercel.app/">
                             <i class="bi bi-link-45deg"></i>
                             <span>Proyecto</span>
                         </a>
