Actualizar ruta de imagen de perfil en el componente Home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
   
   <section class="sectionIntro">
     <header class="intro">
-      <img src="./Assets/profilePic.webp" alt="Foto de perfil de Rubén Aldonza Cejudo" />
+      <img src="assets/img/jpeg/fotoPerfil.jpeg" alt="Foto de perfil de Rubén Aldonza Cejudo" />
       <div>
         <h1>¡Hola! Soy Rubén Aldonza Cejudo</h1>
         <p class="mt-1 text-gray">
