Actualizar estilos de transición y animación en el componente Home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,30 +1,29 @@
-<aside id="optionsMenu" class="text-gray">
+<!-- <aside id="optionsMenu" class="text-gray">
     <i id="lightModeToggler" class="bi bi-brightness-high-fill"></i>
-  </aside>
+  </aside> -->
   
-  <section class="sectionIntro">
-    <header class="intro">
-      <img src="assets/img/jpeg/fotoPerfil.jpeg" alt="Foto de perfil de Rubén Aldonza Cejudo" />
-      <div>
-        <h1>¡Hola! Soy Rubén Aldonza Cejudo</h1>
-        <p class="mt-1 text-gray">
-          Desarrollador web
-          <span class="text-highlight">Fullstack</span>
-          con React, Angular y Django
-        </p>
-      </div>
-    </header>
+<section class="sectionIntro">
+  <header class="intro">
+    <img src="assets/img/jpeg/fotoPerfil.jpeg" alt="Foto de perfil de Rubén Aldonza Cejudo" />
+    <div>
+      <h1>¡Hola! Soy Rubén Aldonza Cejudo</h1>
+      <p class="mt-1 text-gray">
+        Desarrollador web <span class="text-highlight">Fullstack</span> con React, Angular y Django
+      </p>
+    </div>
+  </header>
   
-    <p> Soy desarrollador web, centrado en el Frontend, ¡pero hago de todo! Puedes encontrarme en <a href="mailto:ruben.machado1920@gmail.com" class="text-highlight">{{ email }}</a> y en <a href="https://linkedin.com/in/rubén-aldonza-cejudo-414bb7142" class="text-highlight">LinkedIn</a>.
-    </p>
-  </section>
+  <p> 
+    Soy desarrollador web, centrado en el Frontend, ¡pero hago de todo! Puedes encontrarme en <a href="mailto:ruben.machado1920@gmail.com" class="text-highlight">{{ email }}</a> y en <a href="https://linkedin.com/in/rubén-aldonza-cejudo-414bb7142" class="text-highlight">LinkedIn</a>.
+  </p>
+</section>
 
-  <section class="projectsSection">
-    <app-projects></app-projects>
-  </section>
+<section class="projectsSection">
+  <app-projects></app-projects>
+</section>
   
-  <section class="aboutSection">
-    <app-skills></app-skills>
-  </section>
+<section class="aboutSection">
+  <app-skills></app-skills>
+</section>
 
-  <app-footer></app-footer>
+<app-footer></app-footer>
