--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,49 +1,45 @@
 <h3>Sobre mí</h3>
-        <p>
-            En 2024, terminé el Grado Superior en Desarrollo de Aplicaciones Web, en el IES Hermanos
-            Machado. Durante mis prácticas en FISEVI, dentro del Hospital Virgen del Rocío pero más concretamente en el Instituto de Biomedicina de Sevilla (IBIS),
-            adquirí una valiosa experiencia como Desarrollador de Aplicaciones.
-        </p>
-        <p>
-            Mi enfoque principal es el frontend, donde estoy aprendiendo conocimientos en ReactJS y Angular, y tengo sólidos conocimientos en HTML, CSS, Bootstrap y Javascript.
-        </p>
-        <p class="logos">
-            <!-- <img src="https://cdn-icons-png.flaticon.com/512/732/732212.png" alt="HTML logo"/> -->
-            <img src="assets/img/svg/html.svg" alt="HTML logo"/>
-            <!-- <img src="https://cdn.worldvectorlogo.com/logos/css-3.svg" alt="CSS logo"/> -->
-            <img src="assets/img/svg/css.svg" alt="CSS logo"/>
-            <!-- <img src="https://cdn.worldvectorlogo.com/logos/logo-javascript.svg" alt="Javascript logo"/> -->
-            <img src="assets/img/svg/javascript.svg" alt="Javascript logo"/>
-            <!-- <img src="https://cdn.worldvectorlogo.com/logos/bootstrap-5-1.svg" alt="Bootstrap logo"/> -->
-            <img src="assets/img/svg/bootstrap.svg" alt="Bootstrap logo"/>
-            <!-- <img src="https://cdn.worldvectorlogo.com/logos/react-2.svg" alt="React logo"/> -->
-            <img src="assets/img/svg/react.svg" alt="React logo"/>
-            <!-- <img src="https://cdn.worldvectorlogo.com/logos/angular-icon.svg" alt="Angular logo"/> -->
-            <img src="assets/img/svg/angular.svg" alt="Angular logo"/>
-            <!-- <img src="./Assets/img/svg/typescript.svg" alt="Typescript logo"/> -->
-        </p>
-        <p>
-            En backend, he utilizado principalmente Python, con el framework web Django y DRF para desarrollar mis APIs REST, y también he realizado proyectos utilizando Java. Tengo
-            experiencia con varias bases de datos relacionales, en especial MySQL.
-        </p>
-        <p class="logos">
-            <!-- <img src="https://cdn.worldvectorlogo.com/logos/python-5.svg" alt="Python logo"/> -->
-            <img src="assets/img/svg/python.svg" alt="Python logo"/>
-            <!-- <img src="https://cdn.worldvectorlogo.com/logos/django.svg" alt="Django logo"/> -->
-            <img src="assets/img/svg/django.svg" alt="Djangç logo"/>
-            <!-- <img src="https://cdn.worldvectorlogo.com/logos/java-4.svg" alt="Java logo"/> -->
-            <img src="assets/img/svg/java.svg" alt="Java logo"/>
-            <!-- <img src="https://upload.wikimedia.org/wikipedia/en/d/dd/MySQL_logo.svg" alt="MySQL logo"> -->
-            <img src="assets/img/svg/mysql.svg" alt="MySQL logo"/>
-            <!-- <img src="./Assets/img/svg/spring-boot.svg" alt="SpringBoot logo"/> -->
-        </p>
-        <p>
-            Y en cuanto a despliegues, tengo conocimientos en varios servicios de Amazon Web Services (AWS) como buckets S3 para páginas estáticas y archivos, instancias EC2 para proyectos 
-            Django que necesitan ejecutar código y bases de datos RDS, además de GitHub Pages para proyectos estáticos cuando el proyecto no necesita otros servicios de AWS.
-        </p>
-        <p class="logos">
-            <img src="assets/img/svg/aws.svg" alt="AWS logo"/>
-            <!-- <img src="https://cdn.worldvectorlogo.com/logos/aws-2.svg" alt="AWS logo"/> -->
-            <!-- <img src="https://cdn.worldvectorlogo.com/logos/github-icon.svg" alt="Github logo"/> -->
-            <img src="assets/img/svg/github.svg" alt="GitHub logo"/>
-        </p>
+<p>
+    En 2024, terminé el Grado Superior en Desarrollo de Aplicaciones Web, en el IES Hermanos Machado. Durante mis prácticas en FISEVI, dentro del Hospital Virgen del Rocío pero más concretamente en el Instituto de Biomedicina de Sevilla (IBIS), adquirí una valiosa experiencia como Desarrollador de Aplicaciones.
+</p>
+<p>
+    Mi enfoque principal es el frontend, donde estoy aprendiendo conocimientos en ReactJS y Angular, y tengo sólidos conocimientos en HTML, CSS, Bootstrap y Javascript.
+</p>
+<p class="logos">
+    <!-- <img src="https://cdn-icons-png.flaticon.com/512/732/732212.png" alt="HTML logo"/> -->
+    <img src="assets/img/svg/html.svg" alt="HTML logo"/>
+    <!-- <img src="https://cdn.worldvectorlogo.com/logos/css-3.svg" alt="CSS logo"/> -->
+    <img src="assets/img/svg/css.svg" alt="CSS logo"/>
+    <!-- <img src="https://cdn.worldvectorlogo.com/logos/logo-javascript.svg" alt="Javascript logo"/> -->
+    <img src="assets/img/svg/javascript.svg" alt="Javascript logo"/>
+    <!-- <img src="https://cdn.worldvectorlogo.com/logos/bootstrap-5-1.svg" alt="Bootstrap logo"/> -->
+    <img src="assets/img/svg/bootstrap.svg" alt="Bootstrap logo"/>
+    <!-- <img src="https://cdn.worldvectorlogo.com/logos/react-2.svg" alt="React logo"/> -->
+    <img src="assets/img/svg/react.svg" alt="React logo"/>
+    <!-- <img src="https://cdn.worldvectorlogo.com/logos/angular-icon.svg" alt="Angular logo"/> -->
+    <img src="assets/img/svg/angular.svg" alt="Angular logo"/>
+    <!-- <img src="./Assets/img/svg/typescript.svg" alt="Typescript logo"/> -->
+</p>
+<p>
+    En backend, he utilizado principalmente Python, con el framework web Django y DRF para desarrollar mis APIs REST, y también he realizado proyectos utilizando Java. Tengo experiencia con varias bases de datos relacionales, en especial MySQL.
+</p>
+<p class="logos">
+    <!-- <img src="https://cdn.worldvectorlogo.com/logos/python-5.svg" alt="Python logo"/> -->
+    <img src="assets/img/svg/python.svg" alt="Python logo"/>
+    <!-- <img src="https://cdn.worldvectorlogo.com/logos/django.svg" alt="Django logo"/> -->
+    <img src="assets/img/svg/django.svg" alt="Djangç logo"/>
+    <!-- <img src="https://cdn.worldvectorlogo.com/logos/java-4.svg" alt="Java logo"/> -->
+    <img src="assets/img/svg/java.svg" alt="Java logo"/>
+    <!-- <img src="https://upload.wikimedia.org/wikipedia/en/d/dd/MySQL_logo.svg" alt="MySQL logo"> -->
+    <img src="assets/img/svg/mysql.svg" alt="MySQL logo"/>
+    <!-- <img src="./Assets/img/svg/spring-boot.svg" alt="SpringBoot logo"/> -->
+</p>
+<p>
+    Y en cuanto a despliegues, tengo conocimientos en varios servicios de Amazon Web Services (AWS) como buckets S3 para páginas estáticas y archivos, instancias EC2 para proyectos Django que necesitan ejecutar código y bases de datos RDS, además de GitHub Pages para proyectos estáticos cuando el proyecto no necesita otros servicios de AWS.
+</p>
+<p class="logos">
+    <img src="assets/img/svg/aws.svg" alt="AWS logo"/>
+    <!-- <img src="https://cdn.worldvectorlogo.com/logos/aws-2.svg" alt="AWS logo"/> -->
+    <!-- <img src="https://cdn.worldvectorlogo.com/logos/github-icon.svg" alt="Github logo"/> -->
+    <img src="assets/img/svg/github.svg" alt="GitHub logo"/>
+</p>
