--- a/src/styles.css
+++ b/src/styles.css
@@ -296,7 +296,7 @@ section {
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
-    justify-content: center;
+    justify-content: center !important;
     align-self: center;
 }
 
