Actualizar ruta de imagen de perfil en el componente Home

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -92,4 +92,26 @@
             </div>
         </div>
     </article>
+    <article class="project">
+        <div class="img-container">
+                <img src="./assets/img/png/Rock-Paper-Scissor.png" alt="Rock-Paper-Scissor"/>
+        </div>
+        <div class="project-details">
+            <h3>Rock, Paper, Scissors - Juego interactivo con JavaScript</h3>
+        <div class="techList">
+            <span class="techItem">
+                <span>Javascript</span>
+            </span>
+        </div>
+        Gestor de Contactos en React con Bootstrap es una aplicación web que permite agregar, eliminar y gestionar contactos. Desarrollada en React con React Bootstrap, ofrece una interfaz moderna y responsiva para manejar listas de contactos de manera eficiente.
+        <div class="project-links">
+            <a href="https://rock-paper-scissor-flame-theta.vercel.app/">
+                <i class="bi bi-link-45deg"></i> <span>Proyecto</span>
+            </a>
+            <a href="https://github.com/Rubencito2002/Rock-Paper--Scissor">
+                <i class="bi bi-code-slash"></i> <span>Código</span>
+            </a>
+            </div>
+        </div>
+    </article>
 </div>
