Actualizar estilos de transición y animación en el componente Home: Agregar botón de descarga de CV

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,6 +16,14 @@
   <p> 
     Soy desarrollador web, centrado en el Frontend, ¡pero hago de todo! Puedes encontrarme en <a href="mailto:ruben.machado1920@gmail.com" class="text-highlight">{{ email }}</a> y en <a href="https://linkedin.com/in/rubén-aldonza-cejudo-414bb7142" class="text-highlight">LinkedIn</a>.
   </p>
+
+  <!-- Otro contenido del componente -->
+  <div class="container text-center mt-4">
+    <a href="assets/pdf/RubénAldonzaCejudo_CV.pdf" download="Mi_CV" class="btn-download-cv">
+      Descargar CV
+    </a>
+  </div>
+
 </section>
 
 <section class="projectsSection">
