--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -6,17 +6,11 @@
     Mi enfoque principal es el frontend, donde estoy aprendiendo conocimientos en ReactJS y Angular, y tengo sólidos conocimientos en HTML, CSS, Bootstrap y Javascript.
 </p>
 <p class="logos">
-    <!-- <img src="https://cdn-icons-png.flaticon.com/512/732/732212.png" alt="HTML logo"/> -->
     <img src="assets/img/svg/html.svg" alt="HTML logo"/>
-    <!-- <img src="https://cdn.worldvectorlogo.com/logos/css-3.svg" alt="CSS logo"/> -->
     <img src="assets/img/svg/css.svg" alt="CSS logo"/>
-    <!-- <img src="https://cdn.worldvectorlogo.com/logos/logo-javascript.svg" alt="Javascript logo"/> -->
     <img src="assets/img/svg/javascript.svg" alt="Javascript logo"/>
-    <!-- <img src="https://cdn.worldvectorlogo.com/logos/bootstrap-5-1.svg" alt="Bootstrap logo"/> -->
     <img src="assets/img/svg/bootstrap.svg" alt="Bootstrap logo"/>
-    <!-- <img src="https://cdn.worldvectorlogo.com/logos/react-2.svg" alt="React logo"/> -->
     <img src="assets/img/svg/react.svg" alt="React logo"/>
-    <!-- <img src="https://cdn.worldvectorlogo.com/logos/angular-icon.svg" alt="Angular logo"/> -->
     <img src="assets/img/svg/angular.svg" alt="Angular logo"/>
     <!-- <img src="./Assets/img/svg/typescript.svg" alt="Typescript logo"/> -->
 </p>
@@ -24,22 +18,25 @@
     En backend, he utilizado principalmente Python, con el framework web Django y DRF para desarrollar mis APIs REST, y también he realizado proyectos utilizando Java. Tengo experiencia con varias bases de datos relacionales, en especial MySQL.
 </p>
 <p class="logos">
-    <!-- <img src="https://cdn.worldvectorlogo.com/logos/python-5.svg" alt="Python logo"/> -->
     <img src="assets/img/svg/python.svg" alt="Python logo"/>
-    <!-- <img src="https://cdn.worldvectorlogo.com/logos/django.svg" alt="Django logo"/> -->
     <img src="assets/img/svg/django.svg" alt="Djangç logo"/>
-    <!-- <img src="https://cdn.worldvectorlogo.com/logos/java-4.svg" alt="Java logo"/> -->
     <img src="assets/img/svg/java.svg" alt="Java logo"/>
-    <!-- <img src="https://upload.wikimedia.org/wikipedia/en/d/dd/MySQL_logo.svg" alt="MySQL logo"> -->
     <img src="assets/img/svg/mysql.svg" alt="MySQL logo"/>
     <!-- <img src="./Assets/img/svg/spring-boot.svg" alt="SpringBoot logo"/> -->
 </p>
 <p>
-    Y en cuanto a despliegues, tengo conocimientos en varios servicios de Amazon Web Services (AWS) como buckets S3 para páginas estáticas y archivos, instancias EC2 para proyectos Django que necesitan ejecutar código y bases de datos RDS, además de GitHub Pages para proyectos estáticos cuando el proyecto no necesita otros servicios de AWS.
+    Y en cuanto a despliegues, tengo conocimientos en varios servicios de Amazon Web Services (AWS) como instancias EC2 para proyectos Django que necesitan ejecutar código y bases de datos RDS, además de GitHub Pages para proyectos estáticos cuando el proyecto no necesita otros servicios de AWS. Tambien tengo conocimientos en el uso de Docker para la creación de contenedores y despliegues de aplicaciones.
 </p>
 <p class="logos">
     <img src="assets/img/svg/aws.svg" alt="AWS logo"/>
-    <!-- <img src="https://cdn.worldvectorlogo.com/logos/aws-2.svg" alt="AWS logo"/> -->
-    <!-- <img src="https://cdn.worldvectorlogo.com/logos/github-icon.svg" alt="Github logo"/> -->
     <img src="assets/img/svg/github.svg" alt="GitHub logo"/>
+    <img src="assets/img/png/docker.png" alt="Docker logo"/>
+</p>
+<p>
+    En cuando a herramientas de desarrollo, utilizo Visual Studio Code como editor de código, tambien tengo conocimientos en el uso de Eclipse para el desarrollo de aplicaciones Java. Tambien tengo conocimientos en el uso de Git para el control de versiones de mis proyectos.
+</p>
+<p class="logos">
+    <img src="assets/img/png/visualstudiocode.png" alt="Visual Studio Code logo"/>
+    <img src="assets/img/png/eclipse.png" alt="Eclipse IDE logo"/>
+    <img src="assets/img/png/git.png" alt="Git logo"/>
 </p>
