--- a/src/styles.css
+++ b/src/styles.css
@@ -57,14 +57,16 @@ p {
     text-wrap: pretty;
 }
 
-h1,
-h2,
-h3,
-h4 {
+h1, h2, h3, h4 {
     margin: 0;
     text-wrap: balance;
 }
 
+h3 {
+    text-align: center;
+    text-decoration: underline;
+    margin-bottom: 15px;
+}
 body {
     display: flex;
     flex-direction: column;
