Actualizar enlaces de proyectos en el componente Home

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -18,10 +18,11 @@
             </div>
             Este proyecto fue uno de los primeros que desarrollé utilizando REACT, es un buscador de personajes que utiliza la API de Marvel.
             <div class="project-links">
-                <a href="https://marvel-explorer-phi.vercel.app/">
+                <a href="https://marvel-explorer-phi.vercel.app/" target="_blank">
                     <i class="bi bi-link-45deg"></i> <span>Proyecto</span>
                 </a>
-                <a href="https://github.com/Rubencito2002/marvel-explorer">
+                
+                <a href="https://github.com/Rubencito2002/marvel-explorer" target="_blank">
                     <i class="bi bi-code-slash"></i> <span>Código</span>
                 </a>
             </div>
@@ -47,10 +48,10 @@
             </div>
             Este es un proyecto que ha sido desarrollado a partir de un taller bootstrap con css propio.
             <div class="project-links">
-                <a href="https://proyecto-bootstrap-con-css.vercel.app/">
+                <a href="https://proyecto-bootstrap-con-css.vercel.app/" target="_blank">
                     <i class="bi bi-link-45deg"></i> <span>Proyecto</span>
                 </a>
-                <a href="https://github.com/Rubencito2002/ProyectoBootstrapConCSS">
+                <a href="https://github.com/Rubencito2002/ProyectoBootstrapConCSS" target="_blank">
                     <i class="bi bi-code-slash"></i> <span>Código</span>
                 </a>
             </div>
@@ -83,10 +84,10 @@
         </div>
         Gestor de Contactos en React con Bootstrap es una aplicación web que permite agregar, eliminar y gestionar contactos. Desarrollada en React con React Bootstrap, ofrece una interfaz moderna y responsiva para manejar listas de contactos de manera eficiente.
         <div class="project-links">
-            <a href="https://gestor-contactos.vercel.app/">
+            <a href="https://gestor-contactos.vercel.app/" target="_blank">
                 <i class="bi bi-link-45deg"></i> <span>Proyecto</span>
             </a>
-            <a href="https://github.com/Rubencito2002/gestor-contactos">
+            <a href="https://github.com/Rubencito2002/gestor-contactos" target="_blank">
                 <i class="bi bi-code-slash"></i> <span>Código</span>
             </a>
             </div>
@@ -103,12 +104,12 @@
                 <span>Javascript</span>
             </span>
         </div>
-        Gestor de Contactos en React con Bootstrap es una aplicación web que permite agregar, eliminar y gestionar contactos. Desarrollada en React con React Bootstrap, ofrece una interfaz moderna y responsiva para manejar listas de contactos de manera eficiente.
+        Juego interactivo de "Piedra, Papel o Tijeras" implementado en JavaScript con una interfaz visual intuitiva. Los resultados se muestran en pantalla y se celebra una victoria con una animación de confeti, con opción para reiniciar el juego.
         <div class="project-links">
-            <a href="https://rock-paper-scissor-flame-theta.vercel.app/">
+            <a href="https://rock-paper-scissor-flame-theta.vercel.app/" target="_blank">
                 <i class="bi bi-link-45deg"></i> <span>Proyecto</span>
             </a>
-            <a href="https://github.com/Rubencito2002/Rock-Paper--Scissor">
+            <a href="https://github.com/Rubencito2002/Rock-Paper--Scissor" target="_blank">
                 <i class="bi bi-code-slash"></i> <span>Código</span>
             </a>
             </div>
