Actualizar estilos de transición y animación en el componente Home: Ajustar estilos de sección "Sobre mí" y tarjetas de habilidades

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,42 +1,55 @@
-<h3>Sobre mí</h3>
-<p>
-    En 2024, terminé el Grado Superior en Desarrollo de Aplicaciones Web, en el IES Hermanos Machado. Durante mis prácticas en FISEVI, dentro del Hospital Virgen del Rocío pero más concretamente en el Instituto de Biomedicina de Sevilla (IBIS), adquirí una valiosa experiencia como Desarrollador de Aplicaciones.
-</p>
-<p>
-    Mi enfoque principal es el frontend, donde estoy aprendiendo conocimientos en ReactJS y Angular, y tengo sólidos conocimientos en HTML, CSS, Bootstrap y Javascript.
-</p>
-<p class="logos">
-    <img src="assets/img/svg/html.svg" alt="HTML logo"/>
-    <img src="assets/img/svg/css.svg" alt="CSS logo"/>
-    <img src="assets/img/svg/javascript.svg" alt="Javascript logo"/>
-    <img src="assets/img/svg/bootstrap.svg" alt="Bootstrap logo"/>
-    <img src="assets/img/svg/react.svg" alt="React logo"/>
-    <img src="assets/img/svg/angular.svg" alt="Angular logo"/>
-    <!-- <img src="./Assets/img/svg/typescript.svg" alt="Typescript logo"/> -->
-</p>
-<p>
-    En backend, he utilizado principalmente Python, con el framework web Django y DRF para desarrollar mis APIs REST, y también he realizado proyectos utilizando Java. Tengo experiencia con varias bases de datos relacionales, en especial MySQL.
-</p>
-<p class="logos">
-    <img src="assets/img/svg/python.svg" alt="Python logo"/>
-    <img src="assets/img/svg/django.svg" alt="Djangç logo"/>
-    <img src="assets/img/svg/java.svg" alt="Java logo"/>
-    <img src="assets/img/svg/mysql.svg" alt="MySQL logo"/>
-    <!-- <img src="./Assets/img/svg/spring-boot.svg" alt="SpringBoot logo"/> -->
-</p>
-<p>
-    Y en cuanto a despliegues, tengo conocimientos en varios servicios de Amazon Web Services (AWS) como instancias EC2 para proyectos Django que necesitan ejecutar código y bases de datos RDS, además de GitHub Pages para proyectos estáticos cuando el proyecto no necesita otros servicios de AWS. Tambien tengo conocimientos en el uso de Docker para la creación de contenedores y despliegues de aplicaciones.
-</p>
-<p class="logos">
-    <img src="assets/img/svg/aws.svg" alt="AWS logo"/>
-    <img src="assets/img/svg/github.svg" alt="GitHub logo"/>
-    <img src="assets/img/png/docker.png" alt="Docker logo"/>
-</p>
-<p>
-    En cuando a herramientas de desarrollo, utilizo Visual Studio Code como editor de código, tambien tengo conocimientos en el uso de Eclipse para el desarrollo de aplicaciones Java. Tambien tengo conocimientos en el uso de Git para el control de versiones de mis proyectos.
-</p>
-<p class="logos">
-    <img src="assets/img/png/visualstudiocode.png" alt="Visual Studio Code logo"/>
-    <img src="assets/img/png/eclipse.png" alt="Eclipse IDE logo"/>
-    <img src="assets/img/png/git.png" alt="Git logo"/>
-</p>
+<section id="sobre-mi" class="container my-5">
+    <h3 class="text-center mb-4">Sobre mí</h3>
+
+    <p>
+        En 2024, terminé el Grado Superior en Desarrollo de Aplicaciones Web, en el IES Hermanos Machado. Durante mis prácticas en FISEVI, dentro del Hospital Virgen del Rocío pero más concretamente en el Instituto de Biomedicina de Sevilla (IBIS), adquirí una valiosa experiencia como Desarrollador de Aplicaciones.
+    </p>
+
+    <div class="row justify-content-center">
+        <div class="col">
+            <div class="card mb-4 card-with-title">
+                <div class="card-body">
+                    <b>Frontend</b>
+                    <div class="logos d-flex flex-wrap justify-content-center gap-3 mt-3">
+                        <img src="assets/img/svg/html.svg" alt="HTML logo" class="img-fluid" style="max-height: 50px;">
+                        <img src="assets/img/svg/css.svg" alt="CSS logo" class="img-fluid" style="max-height: 50px;">
+                        <img src="assets/img/svg/javascript.svg" alt="Javascript logo" class="img-fluid" style="max-height: 50px;">
+                        <img src="assets/img/svg/bootstrap.svg" alt="Bootstrap logo" class="img-fluid" style="max-height: 50px;">
+                        <img src="assets/img/svg/react.svg" alt="React logo" class="img-fluid" style="max-height: 50px;">
+                        <img src="assets/img/svg/angular.svg" alt="Angular logo" class="img-fluid" style="max-height: 50px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <b>Backend</b>
+                    <div class="logos d-flex flex-wrap justify-content-center gap-3 mt-3">
+                        <img src="assets/img/svg/python.svg" alt="Python logo" class="img-fluid" style="max-height: 50px;">
+                        <img src="assets/img/svg/django.svg" alt="Django logo" class="img-fluid" style="max-height: 50px;">
+                        <img src="assets/img/svg/java.svg" alt="Java logo" class="img-fluid" style="max-height: 50px;">
+                        <img src="assets/img/svg/mysql.svg" alt="MySQL logo" class="img-fluid" style="max-height: 50px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <b>Devops & Tools</b>
+                    <div class="logos d-flex flex-wrap justify-content-center gap-3 mt-3">
+                        <img src="assets/img/svg/aws.svg" alt="AWS logo" class="img-fluid" style="max-height: 50px;">
+                        <img src="assets/img/svg/github.svg" alt="GitHub logo" class="img-fluid" style="max-height: 50px;">
+                        <img src="assets/img/png/docker.png" alt="Docker logo" class="img-fluid" style="max-height: 50px;">
+                        <img src="assets/img/png/visualstudiocode.png" alt="Visual Studio Code logo" class="img-fluid" style="max-height: 50px;">
+                        <img src="assets/img/png/eclipse.png" alt="Eclipse IDE logo" class="img-fluid" style="max-height: 50px;">
+                        <img src="assets/img/png/git.png" alt="Git logo" class="img-fluid" style="max-height: 50px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
