Actualizar estilos de transición y animación en el componente Home: Ajustar estilos de sección "Sobre mí" y tarjetas de habilidades

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -6,7 +6,7 @@
     </p>
 
     <div class="row justify-content-center">
-        <div class="col">
+        <div class="col-12 col-md-4">
             <div class="card mb-4 card-with-title">
                 <div class="card-body">
                     <b>Frontend</b>
@@ -22,7 +22,7 @@
             </div>
         </div>
 
-        <div class="col">
+        <div class="col-12 col-md-4">
             <div class="card mb-4">
                 <div class="card-body">
                     <b>Backend</b>
@@ -36,7 +36,7 @@
             </div>
         </div>
 
-        <div class="col">
+        <div class="col-12 col-md-4">
             <div class="card mb-4">
                 <div class="card-body">
                     <b>Devops & Tools</b>
